# contract-template

./: Cargo.toml
src/: contract.rs  state.rs
