[package]
name = "<CONTRACT_NAME>"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11", features = [
    "random",
] }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
cosmwasm-schema = "1.0.0"
secret-toolkit = { version = "0.10.0" }
cw-storage-plus = { version = "1.1.0", default-features = false }

schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "1.0" }
shared = { path = "../../packages/shared" }

[[bin]]
name = "schema"